完成登陆界面的设计，对接好登陆